# nex

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  ai_runtime_station.html  bootstrap_station.html  distributed_research_station.html  docker-compose.yml  engineering_cognition_station.html  engineering_replay_viewer.html  industrial_research_station.html  isolate_features.sh  nex_state.db  physical_continuity_station.html  pyproject.toml  requirements.txt  research_workstation.html  vialogic_station.html
.codex/: instructions.md  session.md
ai_divergence_graphs/: ai_divergence_graph.json
ai_runtime_raw/: ai_runtime_0001.json  ai_runtime_0002.json  ai_runtime_0003.json
ai_runtime_text/: ai_runtime_0001.txt  ai_runtime_0002.txt  ai_runtime_0003.txt
analysis/: insight_signal_detector.py
api/: __init__.py  electronics.py  main.py  streaming.py
architecture_derivations/: architecture_replay.json  first_principles_dataset.json  fp_0001.json  fp_0002.json  fp_0003.json
assistant/: research_assistant.py
bootstrap/: bootstrap_validation.md
bootstrap_diagnostics/: bootstrap_diagnostics.json
bridges/: decision_engine_bridge.py  zayvora_corpus_adapter.py
consensus_failure_graphs/: consensus_failure_graph.json
constraint_origins/: fp_0001.json  fp_0002.json  fp_0003.json
constraint_pressure_maps/: constraint_pressure_maps.json
continuity_invariants/: invariants.json
continuity_pressure_maps/: fp_0001.json  fp_0002.json  fp_0003.json
contradictions/: contradiction_artifacts.json
core/: __init__.py  auth.py  (+17 more)
(+423 files in other folders)
