[project]
name = "nex"
version = "1.0.0"
requires-python = "==3.11.*"
dependencies = ["fastapi==0.111.0","uvicorn[standard]==0.30.1","pydantic==2.7.4","httpx==0.27.0","asyncio-throttle==1.0.2","networkx==3.3","python-dotenv==1.0.1","pytest==8.2.2","ruff==0.5.0","mypy==1.10.1","jsonschema==4.22.0","beautifulsoup4==4.12.3","pypdf==4.2.0"]
[tool.ruff]
line-length = 120
[tool.pytest.ini_options]
pythonpath = ["."]
[tool.ruff.lint]
ignore = ["E401", "E701", "E702", "F401", "E501"]
